# Coatex

./: .gitignore  README.md  build.gradle  settings.gradle  tombstone_04
app/: build.gradle
app/cpp/: CMakeLists.txt  kill_tor.cpp
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/certificates/: coatex.bks
app/src/main/java/com/aditya/filebrowser/: Constants.java  FileChooser.java
app/src/main/java/com/ivor/coatex/: BuildConfig.java  ChatActivity.java  CreateNewActivity.java  ImportIdActivity.java  MainActivity.java  VideoViewActivity.java
app/src/main/java/com/ivor/coatex/adapters/: ChatAdapter.java  ContactsAdapter.java
app/src/main/java/com/ivor/coatex/service/: CoatexHostService.java
app/src/main/java/com/ivor/coatex/tor/: Tor.java
app/src/main/java/com/ivor/coatex/utils/: Settings.java
app/src/main/java/com/ivor/kriptex/: AboutActivity.java  AutoStartReceiver.java  BuildConfig.java  ChatActivity.java  CreateNewActivity.java  GenericFileProvider.java  ImportIdActivity.java  KriptexGlideModule.java  MainActivity.java  MainApp.java  RequestActivity.java  SectionsPagerAdapter.java  SendMediaActivity.java  SettingsActivity.java  ShareMediaActivity.java  StartActivity.java  TimerDialog.java  VideoViewActivity.java
app/src/main/java/com/ivor/kriptex/adapters/: ChatAdapter.java  ChatHolderText.java  ContactViewHolder.java  ContactsAdapter.java  (+1 more)
app/src/main/java/com/keenfin/audioview/: AudioService.java  AudioView2.java
app/src/main/java/com/mikepenz/aboutlibraries/: LibsBuilder.java
app/src/main/java/com/novoda/merlin/: Merlin.java  MerlinsBeard.java
app/src/main/java/com/stfalcon/imageviewer/: StfalconImageViewer.java
app/src/main/java/io/realm/: Case.java  OrderedRealmCollection.java  Realm.java  RealmConfiguration.java  RealmObject.java  RealmQuery.java  RealmRecyclerViewAdapter.java  RealmResults.java  RealmSchema.java  Sort.java
app/src/main/java/io/realm/annotations/: Index.java  PrimaryKey.java  Required.java
app/src/main/res/layout/: activity_start_actvity.xml  activity_video_view.xml  content_chat.xml  content_main.xml
app/src/main/res/menu/: activity_chat.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/main/res/xml/: prefs.xml
gradle/wrapper/: gradle-wrapper.properties
tmp/bksgen/: GenerateBks.java
(+36 files in other folders)
